WINKSTART-785: popups are done before darren changes everything

--- a/endpoints/tmpl/endpoint_dialog.html
+++ b/endpoints/tmpl/endpoint_dialog.html
@@ -14,6 +14,8 @@
                         <div class="other_name_wrapper">Please specify the name of this PBX: <input type="text" id="other_name"></input></div>
                     </div>
                     <div class="pbxs">
+                        <div class="pbx bluebox" data-pbx_name="blue.box">&nbsp;</div>
+                        <div class="pbx freeswitch" data-pbx_name="FreeSWITCH">&nbsp;</div>
                         <div class="pbx threecom" data-pbx_name="3com">&nbsp;</div>
                         <div class="pbx allworks" data-pbx_name="allworks">&nbsp;</div>
                         <div class="pbx altigen" data-pbx_name="AltiGen">&nbsp;</div>
