--- a/numbers/tmpl/failover_dialog.html
+++ b/numbers/tmpl/failover_dialog.html
@@ -5,18 +5,19 @@
                 {{if phone_number}}
                 <h3>Failover for ${phone_number}</h3>
                 {{else}}
-                <h3>Default Failover</h3>
+                <h3>Failover</h3>
                 {{/if}}
 
-                <p class="note_box">
-                    If your phone system is unreachable for any reason, we can redirect a caller <br>to an alternate phone system, phone number or VoIP device.<br><br>Note: Failover places an outbound call to connect to your alternate device. <br>This will utilize another trunk/circuit on your account and bill accordingly, <br>the same way it would if you made an outbound call from a phone.
-                </p>
+                <div class="help"><span class="note_icon"/>
+                    If your phone system is unreachable for any reason, we can redirect a caller to an alternate phone system, phone number or VoIP device.
+                </div>
 
-                <div class="inline lg">
+                <div class="help"><span class="note_icon"/>Failover places an outbound call to connect to your alternate device. This will utilize another trunk/circuit on your account and bill accordingly, the same way it would if you made an outbound call from a phone.
+                </div>
+
+                <div class="inline_field">
                     <label class="raw_input failover">Failover number</label>
                     <input type="text" name="raw_input" value="${failover}">
-                </div>
-               <div class="buttons_centered">
                     <button class="fancy_button blue submit_btn" href="#">Activate</button>
                 </div>
             </form>
