WINKSTART-785: Started refining Trunkstore Popups.

--- a/numbers/tmpl/port_popup.html
+++ b/numbers/tmpl/port_popup.html
@@ -38,7 +38,7 @@
                 <div class="step_div first">
                     <div class="split_div">
                         <div class="left_part">
-                            <span class="icon resource"/> Choose your current carrier
+                            <span class="icon resource"/> Current carrier
                         </div>
 
                         <div class="right_part">
@@ -57,7 +57,7 @@
 
                     <div class="split_div">
                         <div class="left_part">
-                            Enter the main number you want to move to the 2600hz service
+                            Main number to port
                         </div>
 
                         <div class="right_part">
@@ -69,22 +69,22 @@
 
                     <div class="split_div">
                         <div class="left_part">
-                            If you want to move additional numbers to the 2600hz service, enter them here
-                            <div class="numbers_example">(For ex. 4156886570, 5104568989, ...)</div>
+                            Additional numbers to port
+                            <div class="numbers_example">Must be on same bill</div>
                         </div>
 
                         <div class="right_part">
-                            <textarea class="numbers_text" name="phone_numbers" placeholder="Type your numbers here. One in each line."></textarea>
+                            <textarea class="numbers_text" name="phone_numbers" placeholder="One number per line"></textarea>
                         </div>
                         <div class="clear"/>
                     </div>
 
-                    <span class="help"><span class="note_icon"/>All numbers you want to port should be associated with one bill from your carrier. If you have more than one carrier you'd like to port numbers away from, please send us separate port requests associated with each different bail.</span>
+                    <span class="help"><span class="note_icon"/>All numbers should be on the same bill from your current carrier. If you have multiple bills or more than one carrier you'd like to port numbers away from please submit each request separately.</span>
                 </div>
 
                 <div class="step_div second">
                     <div class="title">
-                        <span class="icon receipt"/>Please tell us your exact billing information with your current service provider.
+                        <span class="icon receipt"/>Please tell us your billing information with your current service provider.
                     </div>
 
                     <div class="split_div">
@@ -121,18 +121,18 @@
 
                     <div class="loa_block">
                         1. <a href="http://www.2600hz.com/loa" target="_blank">Download LoA form</a>
-                        <span class="help"><span class="note_icon"/>It takes 5 minutes to fill out this form. This letter is important to process your order.</span>
+                        <span class="help"><span class="note_icon"/>This form is quick to fill out and is required to port your number.</span>
                     </div>
 
                     <div class="loa_block">
                         2. Fill out the information and sign it
-                        <span class="help"><span class="note_icon"/>Please ensure that the address on the bill and the LoA match and that the signer of the LoA is the authorized person on the current account or the port will failt.</span>
+                        <span class="help"><span class="note_icon"/>The port will fail if the address or authorized signature on the bill and the LoA do not match what the carrier has on file.</span>
                     </div>
 
                     <div class="loa_block">
                         3. Upload it here
                         <div class="upload_block">Upload signed letter of authorization:&nbsp;&nbsp;<input name="loa" class="loa" type="file"/></div>
-                        <span class="help"><span class="note_icon"/>If you're unable to upload the PDF document, then contact 2600hz representative for an alternative arrangment</span>
+                        <span class="help"><span class="note_icon"/>Having trouble uploading a PDF? Please contact 2600hz at support@2600hz.com</span>
                     </div>
                 </div>
                 <div class="step_div fourth">
@@ -142,10 +142,10 @@
                         <div class="checkbox_line"><input name="extra.cb.cancel" type="checkbox"/>I will not cancel my old service until the port is complete</div>
                         <div class="checkbox_line"><input name="extra.cb.porting_length" type="checkbox"/>I understand the porting process can take from 3 to 30 days</div>
                         <div class="checkbox_line"><input name="extra.cb.termination_charge" type="checkbox"/>I understand my old carrier may charge an early termination fee</div>
-                        <div class="checkbox_line"><input name="extra.cb.standard_numbers" type="checkbox"/>These numbers are standard phone numbers, not <a href="http://www.2600hz.com/features">features</a> (like star-ring)</div>
+                        <div class="checkbox_line"><input name="extra.cb.standard_numbers" type="checkbox"/>These numbers are standard phone numbers, not <a href="http://www.2600hz.com/features" target="_blank">features</a> (like star-ring)</div>
                     </div>
                     <div class="block">
-                        <div class="title"><span class="icon check_circle"/>&nbsp;Terms and Conditions. <a href="http://wwww.2600hz.com/terms" target="_blank">Read Here</a></div>
+                        <div class="title"><span class="icon check_circle"/>&nbsp;Terms and Conditions. <a href="http://www.2600hz.com/terms" target="_blank">Read Here</a></div>
                         <div class="checkbox_line"><input name="extra.agreed" type="checkbox"/>I accept the Terms and Conditions. I have read it and understand it.</div>
                     </div>
                 </div>
