--- a/sipservice/tmpl/main_services.html
+++ b/sipservice/tmpl/main_services.html
@@ -8,6 +8,6 @@
     <div class="addl" style="background-position:0px -60px; height:10px"/>
 
     <ul class="buttons">
-        <li><a class="manage" href="#">Edit these settings</a></li>
+        <li><a class="manage" href="javascript:void(0);">Manage Services</a></li>
     </ul>
 </div>
