WINKSTART-785: Almost done popups for Trunkstore

--- a/credits/tmpl/credits_popup.html
+++ b/credits/tmpl/credits_popup.html
@@ -18,7 +18,7 @@
                             <h2><span class="icon right_arrow"/>  Flat-Rate Outbound Calling</h2>
                             <div class="trunk_line">
                                 <div class="left">Allow up to<input type="text" id="outbound_calls" size="2" value="${trunks}"/></div>
-                                <div class="right">simultaneous outbound calls at <span class="price">$29.99/month</span> per line</div>
+                                <div class="right">simultaneous outbound calls to the US-48 at <span class="price">$29.99/month</span> per line</div>
                                 <div class="clear"/>
                             </div>
 
@@ -36,10 +36,14 @@
                             <h2><span class="icon left_arrow"/>  Flat-Rate Inbound Calling</h2>
                             <div class="trunk_line">
                                 <div class="left">Allow up to<input type="text" id="inbound_calls" size="2" value="${inbound_trunks}"/></div>
-                                <div class="right">simultaneous inbound calls to the US-48 at <span class="price">$6.99/month</span> per line</div>
+                                <div class="right">simultaneous inbound calls at <span class="price">$6.99/month</span> per line</div>
                                 <div class="clear"/>
                             </div>
-                            <div class="note"><span class="note_icon"/>NOTE: If you don't want flat-rate, your account will default to pay-per-minute</div>
+                        </div>
+
+                        <div class="fancy_help border">
+                            <div class="wrapper_icon"><span class="note_icon"/></div>
+                            <div class="help_text">If you don't want flat-rate, your account will default to pay-per-minute</div>
                         </div>
 
                         <div class="buttons_centered">
