--- a/numbers/tmpl/add_number_dialog.html
+++ b/numbers/tmpl/add_number_dialog.html
@@ -12,7 +12,11 @@
         </div>
         <div class="content">
             <div>
-                <span class="help"><span class="note_icon"/>You can specify the area code and up to 3 numbers of the local prefix. For Toll Free number please enter 800, 888, 877, 866, 855 in the area code field.</span>
+                <div class="fancy_help">
+                    <div class="wrapper_icon"><span class="note_icon"/></div>
+                    <div class="help_text">You can specify the area code and up to 3 numbers of the local prefix. For Toll Free number please enter 800, 888, 877, 866, 855 in the area code field.</div>
+                    <div class="clear"/>
+                </div>
             </div>
 
             <div class="toggle_div">
@@ -23,10 +27,14 @@
                     </div>
 
                     <div class="right">
-                        <span class="help"><span class="note_icon"/>Each number you select will be charged to your monthly invoice</span>
+                        <div class="fancy_help small">
+                            <div class="wrapper_icon"><span class="note_icon"/></div>
+                            <div class="help_text">Each number you select will be charged to your monthly invoice</div>
+                            <div class="clear"/>
+                        </div>
 
                         <div class="stats">
-                            <div class="stats_left title_stats">Total selected numbers</div> <div class="selected_numbers stat_number stats_right">0</div>
+                            <div class="stats_left title_stats">Selected numbers</div> <div class="selected_numbers stat_number stats_right">0</div>
                             <div class="stats_left title_stats">Monthly charge</div> <div class="cost_numbers stat_number stats_right">$0.00</div>
                             <div class="stats_left">&nbsp;</div> <div class="stats_right"><button id="add_numbers_button" class="fancy_button blue submit_btn">Add</button></div>
                             <div class="clear"/>
