--- a/numbers/tmpl/port_popup.html
+++ b/numbers/tmpl/port_popup.html
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="split_div">
-                        <div class="left_part">
+                        <div class="left_part text_only">
                             Main number to port
                         </div>
 
@@ -67,7 +67,7 @@
                         <div class="clear"/>
                     </div>
 
-                    <div class="split_div">
+                    <div class="split_div last">
                         <div class="left_part">
                             Additional numbers to port
                             <div class="numbers_example">Must be on same bill</div>
@@ -79,7 +79,11 @@
                         <div class="clear"/>
                     </div>
 
-                    <span class="help"><span class="note_icon"/>All numbers should be on the same bill from your current carrier. If you have multiple bills or more than one carrier you'd like to port numbers away from please submit each request separately.</span>
+                    <div class="fancy_help border">
+                        <div class="wrapper_icon"><span class="note_icon"/></div>
+                        <div class="help_text">All numbers should be on the same bill from your current carrier. If you have multiple bills or more than one carrier you'd like to port numbers away from please submit each request separately.</div>
+                        <div class="clear"/>
+                    </div>
                 </div>
 
                 <div class="step_div second">
@@ -87,7 +91,7 @@
                         <span class="icon receipt"/>Please tell us your billing information with your current service provider.
                     </div>
 
-                    <div class="split_div">
+                    <div class="split_div last">
                         <div class="left_part">
                             <div class="field"><label>Name on Account</label><input type="text" name="port.billing_name"/></div>
                             <div class="field"><label>Account Id</label><input type="text" name="port.billing_account_id" /></div>
@@ -111,7 +115,11 @@
                         <div class="clear"/>
                     </div>
 
-                    <span class="help"><span class="note_icon"/>To process your order we need a copy of your most recent phone bill with at least the main phone number listed on it.</span>
+                    <div class="fancy_help border">
+                        <div class="wrapper_icon"><span class="note_icon"/></div>
+                        <div class="help_text">To process your order we need a copy of your most recent phone bill with at least the main phone number listed on it.</div>
+                        <div class="clear"/>
+                    </div>
                 </div>
 
                 <div class="step_div third">
@@ -121,18 +129,30 @@
 
                     <div class="loa_block">
                         1. <a href="http://www.2600hz.com/loa" target="_blank">Download LoA form</a>
-                        <span class="help"><span class="note_icon"/>This form is quick to fill out and is required to port your number.</span>
+                        <div class="fancy_help">
+                            <div class="wrapper_icon"><span class="note_icon"/></div>
+                            <div class="help_text">This form is quick to fill out and is required to port your number.</div>
+                            <div class="clear"/>
+                        </div>
                     </div>
 
                     <div class="loa_block">
                         2. Fill out the information and sign it
-                        <span class="help"><span class="note_icon"/>The port will fail if the address or authorized signature on the bill and the LoA do not match what the carrier has on file.</span>
+                        <div class="fancy_help">
+                            <div class="wrapper_icon"><span class="note_icon"/></div>
+                            <div class="help_text">The port will fail if the address or authorized signature on the bill and the LoA do not match what the carrier has on file.</div>
+                            <div class="clear"/>
+                        </div>
                     </div>
 
                     <div class="loa_block">
                         3. Upload it here
                         <div class="upload_block">Upload signed letter of authorization:&nbsp;&nbsp;<input name="loa" class="loa" type="file"/></div>
-                        <span class="help"><span class="note_icon"/>Having trouble uploading a PDF? Please contact 2600hz at support@2600hz.com</span>
+                        <div class="fancy_help">
+                            <div class="wrapper_icon"><span class="note_icon"/></div>
+                            <div class="help_text">Having trouble uploading a PDF? Please contact 2600hz at support@2600hz.com</div>
+                            <div class="clear"/>
+                        </div>
                     </div>
                 </div>
                 <div class="step_div fourth">
