--- a/numbers/tmpl/cnam_dialog.html
+++ b/numbers/tmpl/cnam_dialog.html
@@ -1,21 +1,26 @@
 <div>
     <div class="trunkstore_popup cnam">
         <div>
-            {{if phone_number}}
-                <h3>Caller ID Name for ${phone_number}</h3>
-            {{else}}
-                <h3>Default Caller ID Name</h3>
-            {{/if}}
-            <form id="cnam" method="post" action="#">
-                <div class="help"><div class="note_icon"/>When you call someone, show this as your name on their Caller ID Device:</div>
-                <div class="help"><div class="note_icon"/>These requests take up to 72 hours to process and can only be placed once every 72 hours.</div>
+            <div class="left_image">
 
-                <div class="inline_field">
-                    <label>Caller ID Name</label>
-                    <input type="text" name="display_name" value="${display_name}"/>
-                    <button class="fancy_button blue submit_btn" href="#">Submit</button>
-                </div>
-            </form>
+            </div>
+
+            <div class="right_form">
+                <form id="cnam" method="post" action="#">
+                    <div class="caller_id_text">
+                        Show <input type="text" class="caller_id" name="display_name" value="${display_name}" placeholder="John Doe"/> as your name
+                        when you call someone on their Caller ID device.
+                    </div>
+
+                    <div class="fancy_help border custom">
+                        <div class="wrapper_icon"><div class="note_icon"/></div>
+                        <div class="help_text">This request takes up to 72 hours to process and can only be placed once every 72 hours.</div>
+                    </div>
+                    <div class="buttons">
+                        <button class="fancy_button blue submit_btn">Add</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
