--- a/numbers/tmpl/failover_dialog.html
+++ b/numbers/tmpl/failover_dialog.html
@@ -1,24 +1,46 @@
 <div>
     <div class="trunkstore_popup failover">
         <div>
+            <div class="header ${radio}"></div>
             <form id="failover" action="#">
-                {{if phone_number}}
-                <h3>Failover for ${phone_number}</h3>
-                {{else}}
-                <h3>Failover</h3>
-                {{/if}}
+                <h2>Choose a type of failover:</h2>
 
-                <div class="help"><span class="note_icon"/>
-                    If your phone system is unreachable for any reason, we can redirect a caller to an alternate phone system, phone number or VoIP device.
+                <div class="radio_block">
+                    <div class="inline_field">
+                        {{if radio === 'number'}}
+                        <input type="radio" name="failover_type" value="number" CHECKED/>
+                        Alternative Number #
+                        <input placeholder="+1 415-222-5555" type="text" name="raw_input" value="${failover}" class="text_field failover_number">
+                        {{else}}
+                        <input type="radio" name="failover_type" value="number"/>
+                        Alternative Number #
+                        <input placeholder="+1 415-222-5555" type="text" name="raw_input" style="display: none;" class="text_field failover_number">
+                        {{/if}}
+                    </div>
+                    <div class="inline_field">
+                        {{if radio === 'sip'}}
+                        <input type="radio" name="failover_type" value="sip" CHECKED/>
+                        Failover SIP Address
+                        <input placeholder="sip:jon@doe.com" type="text" name="raw_input" value="${failover}" class="text_field failover_sip">
+                        {{else}}
+                        <input type="radio" name="failover_type" value="sip"/>
+                        Failover SIP Address
+                        <input placeholder="sip:jon@doe.com" type="text" name="raw_input" style="display: none;" class="text_field failover_sip">
+                        {{/if}}
+                    </div>
                 </div>
 
-                <div class="help"><span class="note_icon"/>Failover places an outbound call to connect to your alternate device. This will utilize another trunk/circuit on your account and bill accordingly, the same way it would if you made an outbound call from a phone.
+                <div class="fancy_help border">
+                    <div class="wrapper_icon"><span class="note_icon"/></div>
+                    <div class="help_text">If your phone system is unreachable for any reason, we can redirect a caller to an alternate phone number or VoIP device. If the Failover number is an external number this call will cost you for both inbound and outbound.</div>
+                    <div class="clear"/>
                 </div>
 
-                <div class="inline_field">
-                    <label class="raw_input failover">Failover number</label>
-                    <input type="text" name="raw_input" value="${failover}">
-                    <button class="fancy_button blue submit_btn" href="#">Activate</button>
+                <div class="buttons">
+                    {{if radio}}
+                    <button class="fancy_button red remove_failover" tabindex="2">Remove</button>
+                    {{/if}}
+                    <button class="fancy_button blue submit_btn" tabindex="1">Activate</button>
                 </div>
             </form>
         </div>
