WINKSTART-825: Fix Trunkstore temporarly to work with Bootstrap

--- a/endpoints/tmpl/endpoint_dialog.html
+++ b/endpoints/tmpl/endpoint_dialog.html
@@ -77,7 +77,7 @@
             </form>
         </div>
         <div class="buttons">
-            <button class="fancy_button green endpoint edit">Save</button>
+            <button class="btn success endpoint edit">Save</button>
         </div>
     </div>
 </div>
