--- a/numbers/tmpl/add_number_dialog.html
+++ b/numbers/tmpl/add_number_dialog.html
@@ -36,7 +36,7 @@
                         <div class="stats">
                             <div class="stats_left title_stats">Selected numbers</div> <div class="selected_numbers stat_number stats_right">0</div>
                             <div class="stats_left title_stats">Monthly charge</div> <div class="cost_numbers stat_number stats_right">$0.00</div>
-                            <div class="stats_left">&nbsp;</div> <div class="stats_right"><button id="add_numbers_button" class="fancy_button blue submit_btn">Add</button></div>
+                            <div class="stats_left">&nbsp;</div> <div class="stats_right"><button id="add_numbers_button" class="btn primary submit_btn">Add</button></div>
                             <div class="clear"/>
                         </div>
                     </div>
