--- a/numbers/tmpl/cnam_dialog.html
+++ b/numbers/tmpl/cnam_dialog.html
@@ -17,7 +17,7 @@
                         <div class="help_text">This request takes up to 72 hours to process and can only be placed once every 72 hours.</div>
                     </div>
                     <div class="buttons">
-                        <button class="fancy_button blue submit_btn">Add</button>
+                        <button class="btn primary submit_btn">Add</button>
                     </div>
                 </form>
             </div>
