--- a/numbers/tmpl/e911_dialog.html
+++ b/numbers/tmpl/e911_dialog.html
@@ -38,7 +38,7 @@
 
                     <div class="right_part">
                         <div class="e911_image"/>
-                        <button class="fancy_button blue submit_btn">Submit</button>
+                        <button class="btn primary submit_btn">Submit</button>
                     </div>
 
                     <div class="clear"/>
