--- a/numbers/tmpl/failover_dialog.html
+++ b/numbers/tmpl/failover_dialog.html
@@ -38,9 +38,9 @@
 
                 <div class="buttons">
                     {{if radio}}
-                    <button class="fancy_button red remove_failover" tabindex="2">Remove</button>
+                    <button class="btn danger remove_failover">Remove</button>
                     {{/if}}
-                    <button class="fancy_button blue submit_btn" tabindex="1">Activate</button>
+                    <button class="btn primary submit_btn">Activate</button>
                 </div>
             </form>
         </div>
