--- a/credits/tmpl/credits_popup.html
+++ b/credits/tmpl/credits_popup.html
@@ -4,14 +4,14 @@
             <form id="credits_form" name="credits">
 
                 <ul class="settings_tabs settings1">
-                    <li><a href="javascript:void(0);">Flat-Rate Calling</a></li>
-                    <li><a href="javascript:void(0);">Per-Minute Calling</a></li>
+                    <li id="flat_rate_link" class="current"><a href="javascript:void(0);">Flat-Rate Calling</a></li>
+                    <li id="per_minute_link"><a href="javascript:void(0);">Per-Minute Calling</a></li>
                 </ul>
 
                 <div class="clear"></div>
 
-                <div class="pane">
-                    <div id="flat_rate">
+                <div class="panes">
+                    <div class="pane_content" id="flat_rate">
                         <div class="description">Flat-Rate calling allows you to pay a monthly, predictable fee that never changes, regardless of your usage.</div>
 
                         <div class="trunk_block">
@@ -47,18 +47,18 @@
                         </div>
 
                         <div class="buttons_centered">
-                            <button class="fancy_button blue submit_channels">Submit</button>
+                            <button class="btn primary submit_channels">Submit</button>
                         </div>
                     </div>
 
-                    <div id="per_minute">
+                    <div id="per_minute" class="pane_content" style="display:none;">
                         <span>Pay-per-minute allows you to pay only for what you use. Deposit money into your account to get started, then pay-as-you-go for usage.</span>
                         <div class="current_balance_wrapper">
                             <span class="icon price_tag"/>  Your Current Balance: <span class="price_wrapper">$<span class="current_balance">${credits}</span></span>
                         </div>
                         <div class="add_credits_wrapper">
                             I would like to add $<input id="add_credits" type="text" size="4"/> to my current balance
-                            <button class="fancy_button blue purchase_credits">Purchase</button>
+                            <button class="btn primary purchase_credits">Purchase</button>
                         </div>
 
                         <!--
@@ -89,11 +89,6 @@
                         -->
                     </div>
                 </div>
-                <!--
-                <div class="buttons_centered">
-                    <button class="fancy_button blue done_credit">Done!</button>
-                </div>
-                -->
             </form>
         </div>
     </div>
