WINKSTART-881: Add dynamic realm on Trunkstore

--- a/endpoints/tmpl/endpoint_dialog.html
+++ b/endpoints/tmpl/endpoint_dialog.html
@@ -40,7 +40,7 @@
 
                 <div class="block">
                         <div class="title">Set up your PBX<!--<a class="instructions" href="http://www.2600hz.com/instructions" target="_blank">See Instructions</a>--></div>
-                        <div class="note">Register your PBX to 2600hz and send calls to <b>server/realm: server.2600hz.com</b></div>
+                        <div class="note">Register your PBX to 2600hz and send calls to <b>server/realm: ${realm}</b></div>
 
                         <div class="field">
                             <label>Create a Username</label>
